# michael

./: README.md
client/: .env.example  .gitignore  .prettierrc  elm.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
client/src/: Fragment.elm  Main.elm  Performance.elm  Ports.elm  Theme.elm  Vector.elm  WebSocket.elm  elm-vexflow.ts  main.ts  vite-env.d.ts
server/: dune-project  server.opam
