(lang dune 3.17)

(name server)

(source
 (github IntGrah/michael))

(authors "IntGrah <git@sl.intgrah.com>")

(license LICENSE)

(documentation https://github.com/IntGrah/michael)

(package
 (name server)
 (synopsis "Rhythm of Life")
 (description "Evolving musical composition")
 (depends ocaml)
 (tags
  ("music" "rhythm")))
